Clean analyzer tests to avoid forbidden api usage.